--- a/pages/article/article.wxss
+++ b/pages/article/article.wxss
@@ -1,1 +1,46 @@
 /* pages/article/article.wxss */
+
+.wxParse, .wxParse-blockquote, .wxParse-p, .wxParse-pre, .wxParse-tt,
+.wxParse-code, .wxParse-kbd, .wxParse-samp {
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.wxParse-p {
+    margin: 0 0 10px;
+}
+
+.wxParse-p > .wxParse-wxxxcode-style {
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 4px;
+}
+
+.wxParse-code, .wxParse-wxxxcode-style {
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+.wxParse-blockquote {
+    padding: 10px 20px;
+    margin: 0 0 20px;
+    border-left: 5px solid #eee;
+}
+
+.wxParse-script, .wxParse-pre {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.wxParse-a {
+    color: #337ab7;
+}
