--- a/pages/article/article.wxss
+++ b/pages/article/article.wxss
@@ -1,46 +1,28 @@
 /* pages/article/article.wxss */
 
-.wxParse, .wxParse-blockquote, .wxParse-p, .wxParse-pre, .wxParse-tt,
-.wxParse-code, .wxParse-kbd, .wxParse-samp {
+/**towxml基础风格样式**/
+@import '../../towxml/style/main.wxss';
+
+/**如果页面有动态主题切换，则需要将使用到的样式全部引入**/
+
+/**主题配色（浅色样式）**/
+@import '../../towxml/style/theme/light.wxss';
+
+/**主题配色（深色样式）**/
+@import '../../towxml/style/theme/dark.wxss';
+
+.h2w {
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.wxParse-p {
-    margin: 0 0 10px;
+.h2w__main {
+    padding-bottom: 1rpx;
 }
 
-.wxParse-p > .wxParse-wxxxcode-style {
-    padding: 2px 4px;
-    font-size: 90%;
-    color: #c7254e;
-    background-color: #f9f2f4;
-    border-radius: 4px;
+.h2w__blockquote {
+    margin-bottom: 20rpx;
 }
 
-.wxParse-code, .wxParse-wxxxcode-style {
+.h2w__code {
     font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-.wxParse-blockquote {
-    padding: 10px 20px;
-    margin: 0 0 20px;
-    border-left: 5px solid #eee;
-}
-
-.wxParse-script, .wxParse-pre {
-    display: block;
-    padding: 9.5px;
-    margin: 0 0 10px;
-    font-size: 13px;
-    line-height: 1.42857143;
-    color: #333;
-    word-break: break-all;
-    word-wrap: break-word;
-    background-color: #f5f5f5;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.wxParse-a {
-    color: #337ab7;
 }
